--- a/index.html
+++ b/index.html
@@ -7,21 +7,21 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
     <header>
 
     </header>
-    <main class="font-space">
-        <section>                                                                    
-            <div>
-                <h1>Navigating the digital landscape for success</h1>
-                <p>Our digital marketing agency helps businesses grow and succeed online through a range of services including SEO, PPC, social media marketing, and content creation.</p>
-                <button>Book a consultation</button>
+    <main class="font-space containar">
+        <section class="first-sec">                                                                    
+            <div class="article-div">
+                <h1 class="first-title">Navigating the digital landscape for success</h1>
+                <p class="first-pra">Our digital marketing agency helps businesses grow and succeed online through a range of services including SEO, PPC, social media marketing, and content creation.</p>
+                <button class="cous-btn">Book a consultation</button>
             </div>
-            <div>
-                     
+            <div class="image-div">
+                <img src="images-banner/sound.png" alt="1st Banner">
             </div>
         </section>
     </main>
