--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,22 +10,46 @@
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/style.css">
 </head>
+
 <body>
     <header>
 
     </header>
-    <main class="font-space containar">
-        <section class="first-sec">                                                                    
-            <div class="article-div">
-                <h1 class="first-title">Navigating the digital landscape for success</h1>
-                <p class="first-pra">Our digital marketing agency helps businesses grow and succeed online through a range of services including SEO, PPC, social media marketing, and content creation.</p>
-                <button class="cous-btn">Book a consultation</button>
+    <main class="font-space ">
+        <section class="hero-section">
+            <div class="content-box">
+                <div class="hero-items">
+                    <div class="article-div">
+                        <h1>Navigating the digital landscape for success</h1>
+                        <p>Our digital marketing agency helps businesses grow and succeed online through a range of
+                            services including SEO, PPC, social media marketing, and content creation.</p>
+                        <button class="cous-btn">Book a consultation</button>
+                    </div>
+                    <div class="image-div">
+                        <img src="images-banner/sound.png" alt="1st Banner">
+                    </div>
+                </div>
             </div>
-            <div class="image-div">
-                <img src="images-banner/sound.png" alt="1st Banner">
+        </section>
+        <section class="logo-section">
+            <div class="content-box">
+                <div class="company-logo">
+                    <img src="pic-logo/amazon.png" alt="amazon">
+                    <img src="pic-logo/lribble.png" alt="lribble">
+                    <img src="pic-logo/hubspot.png" alt="hubspot">
+                    <img src="pic-logo/notion.png" alt="notion">
+                    <img src="pic-logo/netflex.png" alt="netflex">
+                    <img src="pic-logo/zoom.png" alt="zoom">
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="content-box">
+                
             </div>
         </section>
     </main>
     <footer></footer>
 </body>
+
 </html>
