added card layout

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="styles/style.css">
 </head>
 
@@ -43,9 +44,106 @@
                 </div>
             </div>
         </section>
-        <section>
+        <section class="services-sec">
             <div class="content-box">
-                
+                <div class="service-art">
+                    <h2>Services</h2>
+                <p>At our digital marketing agency, we offer a range of services to help businesses grow and succeed online. These services include:</p>
+                </div>
+            </div>
+        </section>
+        <section class="card-section">
+            <div class="content-box">
+                <div class="card bg-gray drop-shadow">
+                    <div class="card-article">
+                        <div>
+                            <h2 class="bg-green">Search engine</h2>
+                            <h3 class="bg-green">optimization</h3>
+                        </div>
+                        <div class="arrow-div">
+                            <span class="arowIcon bg-black text-green"><i class="fa-solid fa-arrow-up"></i></span>
+                            <a class="text-black" href="">learn more</a>
+                        </div>
+                    </div>
+                    <div class="card-img">
+                        <img src="pic-logo/logo1.png" alt="magnifine glass">
+                    </div>
+                </div>
+                <div class="card bg-green drop-shadow ">
+                    <div class="card-article">
+                        <div>
+                            <h2 class="bg-white">Pay-per-click</h2>
+                            <h3 class="bg-white">advertising</h3>
+                        </div>
+                        <div class="arrow-div">
+                            <span class="arowIcon bg-black text-green"><i class="fa-solid fa-arrow-up"></i></span>
+                            <a class="text-black" href="">learn more</a>
+                        </div>
+                    </div>
+                    <div class="card-img">
+                        <img src="pic-logo/selectLogo.png" alt="magnifine glass">
+                    </div>
+                </div>
+                <div class="card bg-navy">
+                    <div class="card-article">
+                        <div>
+                            <h2 class="bg-white">Social Media</h2>
+                            <h3 class="bg-white">Marketing</h3>
+                        </div>
+                        <div class="arrow-div">
+                            <span class="arowIcon bg-white text-black"><i class="fa-solid fa-arrow-up"></i></span>
+                            <a class="text-white" href="">learn more</a>
+                        </div>
+                    </div>
+                    <div class="card-img">
+                        <img src="pic-logo/logo2.png" alt="magnifine glass">
+                    </div>
+                </div>
+                <div class="card bg-gray drop-shadow ">
+                    <div class="card-article">
+                        <div>
+                            <h2 class="bg-green">Email</h2>
+                            <h3 class="bg-green">Marketing</h3>
+                        </div>
+                        <div class="arrow-div">
+                            <span class="arowIcon"><i class="fa-solid fa-arrow-up"></i></span>
+                            <a href="">learn more</a>
+                        </div>
+                    </div>
+                    <div class="card-img">
+                        <img src="pic-logo/logo1.png" alt="magnifine glass">
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-article">
+                        <div>
+                            <h2>Search engine</h2>
+                            <h3>optimization</h3>
+                        </div>
+                        <div class="arrow-div">
+                            <span class="arowIcon"><i class="fa-solid fa-arrow-up"></i></span>
+                            <a href="">learn more</a>
+                        </div>
+                    </div>
+                    <div class="card-img">
+                        <img src="pic-logo/logo1.png" alt="magnifine glass">
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-article">
+                        <div>
+                            <h2>Search engine</h2>
+                            <h3>optimization</h3>
+                        </div>
+                        <div class="arrow-div">
+                            <span class="arowIcon"><i class="fa-solid fa-arrow-up"></i></span>
+                            <a href="">learn more</a>
+                        </div>
+                    </div>
+                    <div class="card-img">
+                        <img src="pic-logo/logo1.png" alt="magnifine glass">
+                    </div>
+                </div>
             </div>
         </section>
     </main>
