added second and some css code

--- a/index.html
+++ b/index.html
@@ -54,94 +54,110 @@
         </section>
         <section class="card-section">
             <div class="content-box">
-                <div class="card bg-gray drop-shadow">
-                    <div class="card-article">
-                        <div>
-                            <h2 class="bg-green">Search engine</h2>
-                            <h3 class="bg-green">optimization</h3>
+                <div class="parent-card">
+                    <div class="card bg-gray drop-shadow">
+                        <div class="card-article">
+                            <div>
+                                <h2 class="bg-green">Search engine</h2>
+                                <h3 class="bg-green">optimization</h3>
+                            </div>
+                            <div class="arrow-div">
+                                <span class="arowIcon bg-black text-green"><i class="fa-solid fa-arrow-up"></i></span>
+                                <a class="text-black" href="">learn more</a>
+                            </div>
                         </div>
-                        <div class="arrow-div">
-                            <span class="arowIcon bg-black text-green"><i class="fa-solid fa-arrow-up"></i></span>
-                            <a class="text-black" href="">learn more</a>
+                        <div class="card-img">
+                            <img src="pic-logo/logo1.png" alt="magnifine glass">
                         </div>
                     </div>
-                    <div class="card-img">
-                        <img src="pic-logo/logo1.png" alt="magnifine glass">
+                    <div class="card bg-green drop-shadow ">
+                        <div class="card-article">
+                            <div>
+                                <h2 class="bg-white">Pay-per-click</h2>
+                                <h3 class="bg-white">advertising</h3>
+                            </div>
+                            <div class="arrow-div">
+                                <span class="arowIcon bg-black text-green"><i class="fa-solid fa-arrow-up"></i></span>
+                                <a class="text-black" href="">learn more</a>
+                            </div>
+                        </div>
+                        <div class="card-img">
+                            <img src="pic-logo/selectLogo.png" alt="magnifine glass">
+                        </div>
+                    </div>
+                    <div class="card bg-navy">
+                        <div class="card-article">
+                            <div>
+                                <h2 class="bg-white">Social Media</h2>
+                                <h3 class="bg-white">Marketing</h3>
+                            </div>
+                            <div class="arrow-div">
+                                <span class="arowIcon bg-white text-black"><i class="fa-solid fa-arrow-up"></i></span>
+                                <a class="text-white" href="">learn more</a>
+                            </div>
+                        </div>
+                        <div class="card-img">
+                            <img src="pic-logo/logo2.png" alt="magnifine glass">
+                        </div>
+                    </div>
+                    <div class="card bg-gray drop-shadow ">
+                        <div class="card-article">
+                            <div>
+                                <h2 class="bg-green">Email</h2>
+                                <h3 class="bg-green">Marketing</h3>
+                            </div>
+                            <div class="arrow-div">
+                                <span class="arowIcon bg-black text-green"><i class="fa-solid fa-arrow-up"></i></span>
+                                <a href="">learn more</a>
+                            </div>
+                        </div>
+                        <div class="card-img">
+                            <img src="pic-logo/msgLogo.png" alt="magnifine glass">
+                        </div>
+                    </div>
+                    <div class="card bg-green drop-shadow">
+                        <div class="card-article">
+                            <div>
+                                <h2 class="bg-white">Content</h2>
+                                <h3 class="bg-white">Creation</h3>
+                            </div>
+                            <div class="arrow-div">
+                                <span class="arowIcon bg-black text-green"><i class="fa-solid fa-arrow-up"></i></span>
+                                <a href="">learn more</a>
+                            </div>
+                        </div>
+                        <div class="card-img">
+                            <img src="pic-logo/logo3.png" alt="magnifine glass">
+                        </div>
+                    </div>
+                    <div class="card bg-navy">
+                        <div class="card-article">
+                            <div>
+                                <h2 class="bg-green">Analytics and </h2>
+                                <h3 class="bg-green">Tracking</h3>
+                            </div>
+                            <div class="arrow-div">
+                                <span class="arowIcon bg-white text-black"><i class="fa-solid fa-arrow-up"></i></span>
+                                <a class="text-white " href="">learn more</a>
+                            </div>
+                        </div>
+                        <div class="card-img">
+                            <img src="pic-logo/logo4.png" alt="magnifine glass">
+                        </div>
                     </div>
                 </div>
-                <div class="card bg-green drop-shadow ">
-                    <div class="card-article">
-                        <div>
-                            <h2 class="bg-white">Pay-per-click</h2>
-                            <h3 class="bg-white">advertising</h3>
-                        </div>
-                        <div class="arrow-div">
-                            <span class="arowIcon bg-black text-green"><i class="fa-solid fa-arrow-up"></i></span>
-                            <a class="text-black" href="">learn more</a>
-                        </div>
+            </div>
+        </section>
+        <section class="hero-section">
+            <div class="content-box">
+                <div class="hero-items">
+                    <div class="second-banner">
+                        <h2>Let’s make things happen</h2>
+                        <p>Contact us today to learn more about how our digital marketing services can help your business grow and succeed online.</p>
+                        <button class="cous-btn">Get your free proposal</button>
                     </div>
-                    <div class="card-img">
-                        <img src="pic-logo/selectLogo.png" alt="magnifine glass">
-                    </div>
-                </div>
-                <div class="card bg-navy">
-                    <div class="card-article">
-                        <div>
-                            <h2 class="bg-white">Social Media</h2>
-                            <h3 class="bg-white">Marketing</h3>
-                        </div>
-                        <div class="arrow-div">
-                            <span class="arowIcon bg-white text-black"><i class="fa-solid fa-arrow-up"></i></span>
-                            <a class="text-white" href="">learn more</a>
-                        </div>
-                    </div>
-                    <div class="card-img">
-                        <img src="pic-logo/logo2.png" alt="magnifine glass">
-                    </div>
-                </div>
-                <div class="card bg-gray drop-shadow ">
-                    <div class="card-article">
-                        <div>
-                            <h2 class="bg-green">Email</h2>
-                            <h3 class="bg-green">Marketing</h3>
-                        </div>
-                        <div class="arrow-div">
-                            <span class="arowIcon"><i class="fa-solid fa-arrow-up"></i></span>
-                            <a href="">learn more</a>
-                        </div>
-                    </div>
-                    <div class="card-img">
-                        <img src="pic-logo/logo1.png" alt="magnifine glass">
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="card-article">
-                        <div>
-                            <h2>Search engine</h2>
-                            <h3>optimization</h3>
-                        </div>
-                        <div class="arrow-div">
-                            <span class="arowIcon"><i class="fa-solid fa-arrow-up"></i></span>
-                            <a href="">learn more</a>
-                        </div>
-                    </div>
-                    <div class="card-img">
-                        <img src="pic-logo/logo1.png" alt="magnifine glass">
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="card-article">
-                        <div>
-                            <h2>Search engine</h2>
-                            <h3>optimization</h3>
-                        </div>
-                        <div class="arrow-div">
-                            <span class="arowIcon"><i class="fa-solid fa-arrow-up"></i></span>
-                            <a href="">learn more</a>
-                        </div>
-                    </div>
-                    <div class="card-img">
-                        <img src="pic-logo/logo1.png" alt="magnifine glass">
+                    <div class="image-div">
+                        <img src="images-banner/starSmile.png" alt="1st Banner">
                     </div>
                 </div>
             </div>
