added case section

--- a/index.html
+++ b/index.html
@@ -150,17 +150,55 @@
         </section>
         <section class="hero-section">
             <div class="content-box">
-                <div class="hero-items">
-                    <div class="second-banner">
+                <div class="hero-items bg-gray lets border-radius">
+                    <div class="lets-article">
                         <h2>Let’s make things happen</h2>
                         <p>Contact us today to learn more about how our digital marketing services can help your business grow and succeed online.</p>
                         <button class="cous-btn">Get your free proposal</button>
                     </div>
-                    <div class="image-div">
+                    <div class="emoji-div">
                         <img src="images-banner/starSmile.png" alt="1st Banner">
                     </div>
                 </div>
             </div>
+        </section>
+        <section class="services-sec">
+            <div class="content-box">
+                <div class="service-art">
+                    <h2>Case Studies</h2>
+                    <p>Explore Real-Life Examples of Our Proven Digital Marketing Success through Our Case Studies</p>
+                </div>
+            </div>
+        </section>
+        <section class="services-sec">
+            <div class="content-box"> 
+                <div class="case-card-section bg-navy">
+                    <div class="case-card">
+                        <p class="text-white">For a local restaurant, we implemented a targeted PPC campaign that resulted in a 50% increase in website traffic and a 25% increase in sales.</p>
+                        <div class="arrow-div">
+                            <a class="text-green" href="#">learn More</a>
+                            <span class="arowIcon  text-green"><i class="fa-solid fa-arrow-up"></i></span>
+                        </div>
+                    </div>
+                    <div class="case-card border-left">
+                        <p class="text-white">For a B2B software company, we developed an SEO strategy that resulted in a first page ranking for key keywords and a 200% increase in organic traffic.</p>
+                        <div class="arrow-div">
+                            <a class="text-green" href="#">learn More</a>
+                            <span class="arowIcon  text-green"><i class="fa-solid fa-arrow-up"></i></span>
+                        </div>
+                    </div>
+                    <div class="case-card border-left">
+                        <p class="text-white">For a national retail chain, we created a social media marketing campaign that increased followers by 25% and generated a 20% increase in online sales.</p>
+                        <div class="arrow-div">
+                            <a class="text-green" href="#">learn More</a>
+                            <span class="arowIcon  text-green"><i class="fa-solid fa-arrow-up"></i></span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div></div>
         </section>
     </main>
     <footer></footer>
