added working section

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 </div>
             </div>
         </section>
-        <section class="logo-section">
+        <section class="hero-section">
             <div class="content-box">
                 <div class="company-logo">
                     <img src="pic-logo/amazon.png" alt="amazon">
@@ -44,16 +44,13 @@
                 </div>
             </div>
         </section>
-        <section class="services-sec">
+        <section class="hero-section">
             <div class="content-box">
                 <div class="service-art">
                     <h2>Services</h2>
-                <p>At our digital marketing agency, we offer a range of services to help businesses grow and succeed online. These services include:</p>
+                    <p>At our digital marketing agency, we offer a range of services to help
+                         businesses grow and succeed online. These services include:</p>
                 </div>
-            </div>
-        </section>
-        <section class="card-section">
-            <div class="content-box">
                 <div class="parent-card">
                     <div class="card bg-gray drop-shadow">
                         <div class="card-article">
@@ -162,16 +159,12 @@
                 </div>
             </div>
         </section>
-        <section class="services-sec">
-            <div class="content-box">
+        <section class="hero-section">
+            <div class="content-box"> 
                 <div class="service-art">
                     <h2>Case Studies</h2>
                     <p>Explore Real-Life Examples of Our Proven Digital Marketing Success through Our Case Studies</p>
                 </div>
-            </div>
-        </section>
-        <section class="services-sec">
-            <div class="content-box"> 
                 <div class="case-card-section bg-navy">
                     <div class="case-card">
                         <p class="text-white">For a local restaurant, we implemented a targeted PPC campaign that resulted in a 50% increase in website traffic and a 25% increase in sales.</p>
@@ -197,8 +190,72 @@
                 </div>
             </div>
         </section>
-        <section>
-            <div></div>
+        <section class="hero-section">
+            <div class="content-box">
+                <div class="service-art">
+                    <h2>Our Working Process </h2>
+                    <p>Step-by-Step Guide to Achieving Your Business Goals</p>
+                </div>
+                <div class="Working-card">
+                    <div class="first-div border-radius bg-green drop-shadow">
+                        <div class="name-div">
+                            <div class="count-div">
+                                <span class="one">01</span>
+                                <span class="title">Consultation</span>
+                            </div>
+                            <span class="minus bg-white arowIcon"><i class="fa-solid fa-minus"></i></span>
+                        </div>
+                        <div class="consul-doc">
+                            <p>During the initial consultation, we will discuss your business goals and objectives, target audience, and current marketing efforts. This will allow us to understand your needs and tailor our services to best fit your requirements.</p>
+                        </div>
+                    </div>
+                    <div class="first-div border-radius bg-gray drop-shadow">
+                        <div class="name-div">
+                            <div class="count-div">
+                                <span class="one">02</span>
+                                <span class="title">Research and Strategy Development</span>
+                            </div>
+                            <span class="minus bg-white arowIcon"><i class="fa-solid fa-plus"></i></span>
+                        </div>
+                    </div>
+                    <div class="first-div border-radius bg-gray drop-shadow">
+                        <div class="name-div">
+                            <div class="count-div">
+                                <span class="one">03</span>
+                                <span class="title">Implementation</span>
+                            </div>
+                            <span class="minus bg-white arowIcon"><i class="fa-solid fa-plus"></i></span>
+                        </div>
+                    </div>
+                    <div class="first-div border-radius bg-gray drop-shadow">
+                        <div class="name-div">
+                            <div class="count-div">
+                                <span class="one">04</span>
+                                <span class="title">Monitoring and Optimization</span>
+                            </div>
+                            <span class="minus bg-white arowIcon"><i class="fa-solid fa-plus"></i></span>
+                        </div>
+                    </div>
+                    <div class="first-div border-radius bg-gray drop-shadow">
+                        <div class="name-div">
+                            <div class="count-div">
+                                <span class="one">05</span>
+                                <span class="title">Reporting and Communication</span>
+                            </div>
+                            <span class="minus bg-white arowIcon"><i class="fa-solid fa-plus"></i></span>
+                        </div>
+                    </div>
+                    <div class="first-div border-radius bg-gray drop-shadow">
+                        <div class="name-div">
+                            <div class="count-div">
+                                <span class="one">06</span>
+                                <span class="title">Continual Improvement</span>
+                            </div>
+                            <span class="minus bg-white arowIcon"><i class="fa-solid fa-plus"></i></span>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
     <footer></footer>
